@@ -1,4 +1,2 @@
-<html><body>If you are using Java 2, you can enable font smoothing in the
-<b>Text Area</b> pane of the
-<b>Utilities</b>&gt;<b>Global Options</b>
-dialog box.</body></html>
+<html><body>Font smoothing can be enabled in the <b>Text Area</b> pane of the
+<b>Utilities</b>&gt;<b>Global Options</b> dialog box.</body></html>
